--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-  "name": "productscatalog",
+  "name": "Products Catalog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": " node --env-file=.env app.js",
+    "dev": "node --watch --env-file=.env app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^5.1.0",
     "pg": "^8.14.1"
   }
